--- a/index.html
+++ b/index.html
@@ -20,39 +20,34 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="css/images/mypic.jpeg" alt="my-pic">
+        <img id="mypic" src="css/images/mypic.jpg" alt="my-pic">
         <h2>Hello </h2>
-        <p>I create beautiful design, that hopefully makes difference.</p>
+        <p id="creat">I create beautiful design, that hopefully makes difference.</p>
       </div>
-      <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <img class="design" src="css/images/design.png" alt="design">
+          <h3>Design Websites</h3>
+          <p class="p-skills">Create a beautifully designed website using all advanced techniques including: HTML ,CSS ,Javascripts and React framework .</p>
         </div>
         <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <img class="learn" src="css/images/learn.png" alt="learn">
+          <h3>Self learning</h3>
+          <p class="p-skills">Learned to code and developed variety skills on my own, I can handle any new technique and master it eaysiely and briefly . </p>
         </div>
       </div>
-      <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>I would be happy to contact me on my linkden account below .</h3>
+        <p>Open for a fully time job.</p>
+        <a class="btn" href="https://www.linkedin.com/in/sarah-alafif-312a261a5/">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2018 Name Surname.</p>
+      <p id="bottom">© 2021 Sarah Alafif.</p>
     </div>
 
   </body>
