--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>I would be happy to contact me on my linkden account below .</h3>
-        <p>Open for a fully time job.</p>
+        <h5>I would be happy to contact me on my linkden account below .</h5>
+        <p id="contact">Open for a fully time job.</p>
         <a class="btn" href="https://www.linkedin.com/in/sarah-alafif-312a261a5/">CONTACT ME</a>
       </div>
     </div>
