correct some mistakes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="skill-row">
           <img class="learn" src="css/images/learn.png" alt="learn">
           <h3>Self learning</h3>
-          <p class="p-skills">Learned to code and developed variety skills on my own, I can handle any new technique and master it eaysiely and briefly . </p>
+          <p class="p-skills">Learned to code and developed variety skills on my own, I can handle any new technique and master it easily and briefly . </p>
         </div>
       </div>
       <div class="contact-me">
